--- a/server.properties
+++ b/server.properties
@@ -1,6 +1,6 @@
 enable-jmx-monitoring=false
 rcon.port=25575
-level-seed=
+level-seed=712262452098460
 enable-command-block=false
 gamemode=survival
 enable-query=false
